# cedula-uy-pdf-sign

./: .gitignore  NOTICE  README.md  pyproject.toml
docs/: cookbook.md  development.md  trust-anchors.md
scripts/: dev-softhsm-setup.sh
src/cedula_uy_pdf_sign/: appearance.py  card_reader.py  cert_utils.py  cli.py  cms_verify.py  national_ca.py  pdf_verify.py  pkcs11_utils.py  verify_common.py  xml_sign.py  xml_verify.py
src/firmauy/: __init__.py  __main__.py  appearance.py  card_reader.py  cert_utils.py  ci.py  cli.py  cms_sign.py  cms_verify.py  constants.py  national_ca.py  pdf_verify.py  pin.py  pkcs11_utils.py  xml_sign.py  xml_verify.py
src/firmauy/data/: PROVENANCE.md  mica.pem
tests/: conftest.py  test_appearance.py  test_card_reader.py  test_cert_utils.py  test_ci.py  test_cli.py  test_cms.py  test_integration_cms.py  test_integration_pkcs11.py  test_integration_xades.py  test_national_ca.py  test_pin.py  test_pkcs11_utils.py  test_tsa.py  test_verify_quiet.py  test_xades_t.py  test_xml_verify.py
