[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "firmauy"
version = "1.1.0"
authors = [
  { name = "Carlos A. Planchón", email = "carlosplanchon@cognitialabs.com" }
]
description = "Sign and verify PDF (PAdES), XML (XAdES) and arbitrary files (CAdES/.p7s) with a Uruguayan national ID card (cédula) via PKCS#11. Standards-based; not affiliated with AGESIC."
readme = "README.md"
requires-python = ">=3.10"

license = "Apache-2.0"
license-files = ["LICENSE"]

keywords = ["pdf", "xml", "xades", "pades", "cades", "cms", "p7s", "pkcs11", "uruguay", "agesic", "cedula", "signature", "electronic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "asn1crypto>=1.5.1",
    "cryptography>=49.0.0",
    "lxml>=6.1.1",
    "pillow>=10.0.0",
    "pyhanko[pkcs11]>=0.35.1",
    "pyhanko-certvalidator>=0.31.1",
    "pyscard>=2.3.1",
    "python-pkcs11>=0.9.4",
    "reportlab>=5.0.0",
    "typer>=0.26.8",
]

[project.urls]
Repository = "https://github.com/carlosplanchon/firmauy"

[project.scripts]
firmauy = "firmauy.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
firmauy = ["data/*.pem", "data/PROVENANCE.md"]

[dependency-groups]
dev = ["pytest>=8", "signxml>=4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
